--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <inceptionYear>2012</inceptionYear>
     <groupId>com.alibaba.rocketmq</groupId>
     <artifactId>rocketmq-all</artifactId>
-    <version>${module.version}</version>
+    <version>3.3.0-lejiayuan</version>
     <packaging>pom</packaging>
     <name>rocketmq-all ${project.version}</name>
     <url>https://github.com/alibaba/rocketmq</url>
@@ -85,7 +85,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <module.version>3.3.0-lejiayuan</module.version>
         <!--maven properties -->
         <maven.test.skip>true</maven.test.skip>
         <maven.jdoc.skip>true</maven.jdoc.skip>
